# job-board-backend

./: Cargo.toml
migrations/: 20250308034551_create_users_table.sql  20250308034715_create_jobs_table.sql  20250308034722_create_applications_table.sql
src/: main.rs
src/handlers/: applications.rs  auth.rs  jobs.rs  mod.rs  users.rs
src/models/: application.rs  job.rs  mod.rs  user.rs
src/routes/: applications.rs  auth.rs  jobs.rs  mod.rs  users.rs
src/utils/: auth.rs  jwt.rs
