[package]
name = "job-board-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "decimal"] }
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
actix-cors = "0.6"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"]}
